--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,6 +22,7 @@ steps:
   displayName: Check AZ Version
   inputs:
     azureSubscription: arm-resource-group
+    scriptType: pscore
     scriptLocation: inlineScript
     inlineScript: |
       echo "az version"
