--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,10 +25,9 @@ steps:
     scriptType: pscore
     scriptLocation: inlineScript
     inlineScript: |
-      echo "az version"
       az --version
-      echo "az account show"
       az account show
+      echo "HALLO"
 
 - task: AzureCLI@1
   displayName: Terraform credentials
@@ -42,4 +41,5 @@ steps:
       echo "##vso[task.setvariable variable=ARM_CLIENT_SECRET;issecret=true]$servicePrincipalKey"
       echo "##vso[task.setvariable variable=ARM_SUBSCRIPTION_ID]$subscriptionId"
       echo "##vso[task.setvariable variable=ARM_TENANT_ID]$tenantId"
+      echo "HALLO"
     addSpnToEnvironment: true
