--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,3 +43,9 @@ steps:
       echo "##vso[task.setvariable variable=ARM_TENANT_ID]$tenantId"
       echo "HALLO"
     addSpnToEnvironment: true
+- task: CmdLine@2
+  inputs:
+    script: |
+      echo "ARM_SUBSCRIPTION_ID:"
+      
+      echo $ARM_SUBSCRIPTION_ID
