Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,7 +25,7 @@ variables:
 - name: subscriptionConnection
   value: arm-resource-group
 - name: terraformDirectory
-  value: .
+  value: terraform
 
 steps:
 - script: echo Hello, world!
