--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -65,7 +65,11 @@ steps:
                      -backend-config="storage_account_name=$(tf-storage-account-name)" `
                      -backend-config="container_name=$(tf-container-name)" `
                      -backend-config="key=$(tf-blob-key-name)" `
-                     -backend-config="access_key=$(ACCOUNT_KEY)"
+                     -backend-config="access_key=$(ACCOUNT_KEY)" `
+                     -backend-config="subscription_id=$(ARM_SUBSCRIPTION_ID)" `
+                     -backend-config="tenant_id=$(ARM_TENANT_ID)" `
+                     -backend-config="client_id=$(ARM_CLIENT_ID)" `
+                     -backend-config="client_secret=$(ARM_CLIENT_SECRET)"
     addSpnToEnvironment: true
     useGlobalConfig: true
     failOnStandardError: true
