Update azure-pipelines.yml for Azure Pipelines: terraform apply

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -75,3 +75,10 @@ steps:
     failOnStandardError: true
     powerShellIgnoreLASTEXITCODE: false
     workingDirectory: '$(terraformDirectory)'
+
+- bash: |
+    set -eu  # fail on error
+    terraform plan -out=solution.plan -input=false
+    #terraform apply -input=false -auto-approve tfplan
+  displayName: Terraform apply
+  workingDirectory: '$(terraformDirectory)'
