--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,7 @@ variables:
 - name: azureResourceGroup
   value: cicd-automated-testing-rg
 - name: azureApplicationType
-  value: cicd-automated-testing
+  value: cicd-app
 - name: azureVirtualNetworkName
   value: cicd-network
 - name: azureAddressPrefixTest
@@ -87,9 +87,9 @@ steps:
       -var="tenant_id=$(ARM_TENANT_ID)" \
       -var="location=$(azureLocation)" \
       -var="resource_group=$(azureResourceGroup)" \
-      -var="application_type=$(azureResourceGroup)" \
+      -var="application_type=$(azureApplicationType)" \
       -var="virtual_network_name=$(azureVirtualNetworkName)" \
-      -var="address_prefix_test=$(azureVirtualNetworkName)" \
+      -var="address_prefix_test=$(azureAddressPrefixTest)" \
       -var="address_space=$(azureAddressSpace)"
     #terraform apply -input=false -auto-approve solution.plan
   displayName: Terraform plan
