--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,16 +40,25 @@ steps:
   displayName: 'Install an SSH key'
   inputs:
     knownHostsEntry: 'SHA256:1Hyr55tsxGifESBMc0s+2NtutnR/4+LOkVwrOGrIp8U johndoe@contoso'
-    sshPublicKey: '$(AZURE-DEVOPS-PUBLIC-KEY)'
+    sshPublicKey: '$(ssh-public-key)'
     sshKeySecureFile: 'id_rsa'
 
 - task: CmdLine@2
   displayName: 'Checking SSH files'
   inputs:
     script: |
+      echo "SSH public key from environment: "
       echo "Checking SSH files"
+      echo "---ls -la ~/.ssh"
       ls -la ~/.ssh
-      ls -l ~
+      echo "---/home/vsts/work/_temp/id_rsa"
+      ls -l /home/vsts/work/_temp/id_rsa
+      echo "---/home/vsts/work/_temp"
+      ls -la /home/vsts/work/_temp
+      echo "---/home/vsts/work"
+      ls -la /home/vsts/work
+      echo "---find ~ -name id_rsa -type f -exec ls -l {} \;"
+      find ~ -name id_rsa -type f -exec ls -l {} \;
 
 - task: AzureCLI@1
   displayName: Terraform credentials
@@ -104,7 +113,8 @@ steps:
       -var="application_type=$(azureApplicationType)" \
       -var="virtual_network_name=$(azureVirtualNetworkName)" \
       -var="address_prefix_test=$(azureAddressPrefixTest)" \
-      -var="address_space=$(azureAddressSpace)"
+      -var="address_space=$(azureAddressSpace)" \
+      -var="ssh_private_key_file='/home/vsts/work/_temp/id_rsa'"
     #terraform apply -input=false -auto-approve solution.plan
   displayName: Terraform plan
   workingDirectory: '$(terraformDirectory)'
