--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -47,7 +47,7 @@ steps:
   displayName: 'Checking SSH files'
   inputs:
     script: |
-      echo "SSH public key from environment: "
+      echo "SSH public key from environment: $(ssh-public-key)"
       echo "Checking SSH files"
       echo "---ls -la ~/.ssh"
       ls -la ~/.ssh
@@ -113,8 +113,7 @@ steps:
       -var="application_type=$(azureApplicationType)" \
       -var="virtual_network_name=$(azureVirtualNetworkName)" \
       -var="address_prefix_test=$(azureAddressPrefixTest)" \
-      -var="address_space=$(azureAddressSpace)" \
-      -var="ssh_private_key_file='/home/vsts/work/_temp/id_rsa'"
+      -var="address_space=$(azureAddressSpace)"
     #terraform apply -input=false -auto-approve solution.plan
   displayName: Terraform plan
   workingDirectory: '$(terraformDirectory)'
