--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -128,6 +128,16 @@ steps:
 
 - bash: |
     set -eu  # fail on error
-    terraform destroy -input=false -auto-approve
+    terraform destroy -input=false -auto-approve \
+      -var="subscription_id=$(ARM_SUBSCRIPTION_ID)" \
+      -var="client_id=$(ARM_CLIENT_ID)" \
+      -var="client_secret=$(ARM_CLIENT_SECRET)" \
+      -var="tenant_id=$(ARM_TENANT_ID)" \
+      -var="location=$(azureLocation)" \
+      -var="resource_group=$(azureResourceGroup)" \
+      -var="application_type=$(azureApplicationType)" \
+      -var="virtual_network_name=$(azureVirtualNetworkName)" \
+      -var="address_prefix_test=$(azureAddressPrefixTest)" \
+      -var="address_space=$(azureAddressSpace)"
   displayName: Terraform destroy
   workingDirectory: '$(terraformDirectory)'
