Extended PATH and changed to snap chromium

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -205,11 +205,12 @@ stages:
                 # sudo apt-get install python3-pip -y
                 curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py || wget https://bootstrap.pypa.io/get-pip.py
                 python3 get-pip.py
+                export PATH=$PATH:/home/azureuser/.local/bin
                 pip3 --version
                 python3 -m pip install -U pip
                 
                 
                 sudo apt-get install unzip -y
-                sudo snap install chromium-browser
+                sudo snap install chromium
                 pip3 install selenium
                 export PATH=$PATH:some/path
