Correction of path to user.properties file

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -269,6 +269,7 @@ stages:
                 sudo apt install openjdk-11-jre tree -y
                 # check the Java version
                 java -version
+
                 # download Apache JMeter load testing tool
                 jmeter_file="apache-jmeter-5.4.1.zip"
                 if [ ! -f "$jmeter_file" ]; then
@@ -276,24 +277,22 @@ stages:
                   wget "https://jmeter.apache.org/[preferred]/jmeter/binaries/$jmeter_file" || \
                     wget "http://ftp.cc.uoc.gr/mirrors/apache/jmeter/binaries/$jmeter_file"
                 fi
+                
                 # extract the JMeter archive
                 jmeter_directory="apache-jmeter-5.4.1"
                 if [ ! -d "$jmeter_directory" ]; then
                   echo "Directory $jmeter_directory not found! Extracting ZIP archive ..."
                   unzip apache-jmeter-5.4.1.zip
                 fi
-                # tree
-                tree .
-                # copy JMeter test plan files to JMeter directory
-                #cp activities.csv authors.csv books.csv Endurance_Test_Plan_CICD.jmx user.properties apache-jmeter-5.4.1
+                
                 # add JMeter binary directory to PATH environment variable
                 export PATH="$PATH:`pwd`/apache-jmeter-5.4.1/bin"
                 # run JMeter in headless mode (endurance tests)
+                # JMeter testplan files: activities.csv authors.csv books.csv Endurance_Test_Plan_CICD.jmx user.properties
                 echo "====="
                 echo "run JMeter in headless mode (endurance tests)"
-                JVM_ARGS="-Xms512m -Xmx512m" jmeter.sh -n -p user.properties -t automatedtesting/jmeter/Endurance_Test_Plan_CICD.jmx -l resultsJMeterLoadTests.jtl –j jmeter.log –e –o reports
+                JVM_ARGS="-Xms512m -Xmx512m" jmeter.sh -n -p automatedtesting/jmeter/user.properties -t automatedtesting/jmeter/Endurance_Test_Plan_CICD.jmx -l resultsJMeterLoadTests.jtl –j jmeter.log –e –o reports
                 echo "====="
                 # run JMeter in headless mode (stress tests)
-                # tree
-                tree .
+                
                 # publish results of the JMeter load tests
