--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -248,51 +248,49 @@ stages:
                 pip3 install selenium
                 export PATH=$PATH:some/path
 
-  - deployment: RunLoadTestsWithJMeter
-    displayName: 'Run JMeter Load Tests'
-    environment:
-      name: TEST
-      resourceType: VirtualMachine
-      tags: ubuntu
-    strategy:
-      runOnce:
-        deploy:
-          steps:
-          - task: Bash@3
-            inputs:
-              targetType: 'inline'
-              script: |
-                #! /bin/bash
-                sudo apt update -y
-                sudo apt upgrade -y
-                # install Java Runtime Environment
-                sudo apt install openjdk-11-jre tree -y
-                # check the Java version
-                java -version
+  - job: RunLoadTestsWithJMeter
+    displayName: 'JMeter Setup And Run'
+    pool:
+      vmImage: ubuntu-latest
+    steps:
+    - task: Bash@3
+      displayName: 'JMeter Load Tests'
+      inputs:
+        targetType: 'inline'
+        script: |
+          #! /bin/bash
+          sudo apt update -y
+          sudo apt upgrade -y
+          # install Java Runtime Environment
+          sudo apt install openjdk-11-jre tree -y
+          # check the Java version
+          java -version
+          # print pwd
+          echo "pwd: `pwd`"
 
-                # download Apache JMeter load testing tool
-                jmeter_file="apache-jmeter-5.4.1.zip"
-                if [ ! -f "$jmeter_file" ]; then
-                  echo "File $jmeter_file not found! Downloading ..."
-                  wget "https://jmeter.apache.org/[preferred]/jmeter/binaries/$jmeter_file" || \
-                    wget "http://ftp.cc.uoc.gr/mirrors/apache/jmeter/binaries/$jmeter_file"
-                fi
-                
-                # extract the JMeter archive
-                jmeter_directory="apache-jmeter-5.4.1"
-                if [ ! -d "$jmeter_directory" ]; then
-                  echo "Directory $jmeter_directory not found! Extracting ZIP archive ..."
-                  unzip apache-jmeter-5.4.1.zip
-                fi
-                
-                # add JMeter binary directory to PATH environment variable
-                export PATH="$PATH:`pwd`/apache-jmeter-5.4.1/bin"
-                # run JMeter in headless mode (endurance tests)
-                # JMeter testplan files: activities.csv authors.csv books.csv Endurance_Test_Plan_CICD.jmx user.properties
-                echo "====="
-                echo "run JMeter in headless mode (endurance tests)"
-                JVM_ARGS="-Xms512m -Xmx512m" jmeter.sh -n -p automatedtesting/jmeter/user.properties -t automatedtesting/jmeter/Endurance_Test_Plan_CICD.jmx -l resultsJMeterLoadTests.jtl –j jmeter.log –e –o reports
-                echo "====="
-                # run JMeter in headless mode (stress tests)
-                
-                # publish results of the JMeter load tests
+          # download Apache JMeter load testing tool
+          jmeter_file="apache-jmeter-5.4.1.zip"
+          if [ ! -f "$jmeter_file" ]; then
+            echo "File $jmeter_file not found! Downloading ..."
+            wget "https://jmeter.apache.org/[preferred]/jmeter/binaries/$jmeter_file" || \
+              wget "http://ftp.cc.uoc.gr/mirrors/apache/jmeter/binaries/$jmeter_file"
+          fi
+          
+          # extract the JMeter archive
+          jmeter_directory="apache-jmeter-5.4.1"
+          if [ ! -d "$jmeter_directory" ]; then
+            echo "Directory $jmeter_directory not found! Extracting ZIP archive ..."
+            unzip apache-jmeter-5.4.1.zip
+          fi
+          
+          # add JMeter binary directory to PATH environment variable
+          export PATH="$PATH:`pwd`/apache-jmeter-5.4.1/bin"
+          # run JMeter in headless mode (endurance tests)
+          # JMeter testplan files: activities.csv authors.csv books.csv Endurance_Test_Plan_CICD.jmx user.properties
+          echo "====="
+          echo "run JMeter in headless mode (endurance tests)"
+          JVM_ARGS="-Xms512m -Xmx512m" jmeter.sh -n -p automatedtesting/jmeter/user.properties -t automatedtesting/jmeter/Endurance_Test_Plan_CICD.jmx -l resultsJMeterLoadTests.jtl –j jmeter.log –e –o reports
+          echo "====="
+          # run JMeter in headless mode (stress tests)
+          
+          # publish results of the JMeter load tests
